--- a/.github/workflows/push_to_ecr.yml
+++ b/.github/workflows/push_to_ecr.yml
@@ -43,7 +43,35 @@ jobs:
         sleep 10
         curl localhost -vvv
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        
+
+name: Deploy to ECR2
+
+on: 
+  push:
+    branches: [ master ]
+
+jobs:
+  
+  build:
+    
+    name: Build Image2
+    runs-on: ubuntu-latest
+
+   
+    steps:
+
+    - name: Check out code2
+      uses: actions/checkout@v2
+
+    - name: Login to Amazon ECR2
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+        AWS_REGION: us-east-1
+
     - name: Build, test, tag, and push image to Amazon ECR2
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -61,3 +89,4 @@ jobs:
         sleep 10
         curl localhost -vvv
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+     
