--- a/.github/workflows/push_to_ecr2.yaml
+++ b/.github/workflows/push_to_ecr2.yaml
@@ -32,14 +32,12 @@ jobs:
         ECR_REPOSITORY: clo385-assign-app
         IMAGE_TAG: v0.1
       run: |
-        cd ../clo835_fall2022_assignment1/
+        cd ../webapp/
         ls -ltra
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         # Unit test
         docker run -d -p 80:8080 --name nodeapp $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker ps
-        echo "Pause for 10 seconds to let container start"
-        sleep 10
         curl localhost -vvv
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
