--- a/.github/workflows/ecr.yml
+++ b/.github/workflows/ecr.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Login to Amazon ECR2
       id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
+      uses: aws-actions/amazon-ecr-login@v1
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -32,7 +32,7 @@ jobs:
         ECR_REPOSITORY: clo385-assign-app
         IMAGE_TAG: v0.1
       run: |
-        cd ../webapp/
+        cd webapp/
         ls -ltra
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
